--- a/toolkit/partner-chains-cli/Cargo.toml
+++ b/toolkit/partner-chains-cli/Cargo.toml
@@ -37,6 +37,8 @@ ogmios-client = { workspace = true, features = ["jsonrpsee-client"] }
 tokio = { workspace = true }
 cardano-serialization-lib = { workspace = true }
 partner-chains-cardano-offchain = { workspace = true }
+log = { workspace = true }
+log4rs = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
