--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -89,6 +89,8 @@ runs:
           ${decrypt_switch} \
           --json-report \
           --json-report-summary \
+          --json-report-detailed \
+          --tb=short" \
           --junitxml=junit_report.xml"
 
         if [[ "${{ inputs.local-environment }}" == "true" ]]; then
