--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -113,9 +113,13 @@ runs:
         mkdir -p e2e-tests
         docker cp tests:/e2e-tests/.report.json e2e-tests/.report.json
 
+    - uses: geekyeggo/delete-artifact@v5
+      continue-on-error: true
+      with:
+          name: test-results
+
     - name: Upload test results
       uses: actions/upload-artifact@v4
-      continue-on-error: true
       with:
         name: test-results
         path: e2e-tests/.report.json
