feat: make CD chain wipe optional

--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -113,6 +113,11 @@ runs:
         mkdir -p e2e-tests
         docker cp tests:/e2e-tests/.report.json e2e-tests/.report.json
 
+    - uses: geekyeggo/delete-artifact@v5
+      continue-on-error: true
+      with:
+          name: test-results
+
     - name: Upload test results
       uses: actions/upload-artifact@v4
       with:
@@ -121,6 +126,7 @@ runs:
         overwrite: true
         if-no-files-found: error
         include-hidden-files: true
+        
     - name: Fail the job
       if: ${{ steps.run-tests.outcome == 'failure' }}
       run: exit 1
