--- a/toolkit/offchain/Cargo.toml
+++ b/toolkit/offchain/Cargo.toml
@@ -14,7 +14,6 @@ targets = ["x86_64-unknown-linux-gnu"]
 anyhow = { workspace = true }
 cardano-serialization-lib = { workspace = true }
 cbor_event = { workspace = true }
-db-sync-follower = { workspace = true, features = ["candidate-source"] }
 partner-chains-plutus-data = { workspace = true }
 fraction = { workspace = true }
 hex = { workspace = true }
@@ -41,3 +40,5 @@ fraction = { workspace = true, features = ["with-decimal", "with-serde-support"]
 proptest = { workspace = true }
 time = { workspace = true, features = ["std", "serde", "parsing"] }
 pretty_assertions = { workspace = true }
+#db-sync-follower uses setup that is hard to port to modern testcontainers
+testcontainers = { version = "0.15.0" }
