--- a/toolkit/cli/node-commands/Cargo.toml
+++ b/toolkit/cli/node-commands/Cargo.toml
@@ -10,6 +10,8 @@ clap = { workspace = true }
 cli-commands = { workspace = true }
 env_logger = { workspace = true }
 frame-support = { workspace = true }
+log = { workspace = true }
+log4rs = { workspace = true }
 parity-scale-codec = { workspace = true }
 partner-chains-smart-contracts-commands = { workspace = true }
 plutus = { workspace = true }
