--- a/.github/workflows/smart-contracts-integrations-tests-ghcr.yml
+++ b/.github/workflows/smart-contracts-integrations-tests-ghcr.yml
@@ -1,4 +1,4 @@
-name: Build and Publish Smart Contracts Integration Tests image to GHCR Private Repository
+name: Build and Push smart-contracts-tests-cardano-node-ogmios image to GHCR
 
 on:
   workflow_dispatch:
@@ -33,5 +33,5 @@ jobs:
           file: toolkit/offchain/tests/docker/Dockerfile
           push: true
           tags: 
-            ghcr.io/partner-chains/smart-contracts-integration-tests:${{ inputs.tag }}
-            ghcr.io/partner-chains/smart-contracts-integration-tests:latest
+            ghcr.io/partner-chains/smart-contracts-tests-cardano-node-ogmios:${{ inputs.tag }}
+            ghcr.io/partner-chains/smart-contracts-tests-cardano-node-ogmios:latest
