--- a/E2E-tests/pytest.ini
+++ b/E2E-tests/pytest.ini
@@ -25,6 +25,8 @@ log_cli = True
 log_cli_level = info
 log_file = debug.log
 log_file_level = debug
+log_file_format = %(asctime)s %(levelname)-8s [logger=%(name)s, file=%(filename)s:%(lineno)d] %(message)s
+log_file_date_format = %Y-%m-%d %H:%M:%S
 addopts = -ra
           --tb=short
           --show-capture=no
