fix: smart-contracts-integrations-tests-ghcr

--- a/.github/workflows/smart-contracts-integrations-tests-ghcr.yml
+++ b/.github/workflows/smart-contracts-integrations-tests-ghcr.yml
@@ -32,6 +32,6 @@ jobs:
           context: toolkit/offchain/tests/docker/
           file: toolkit/offchain/tests/docker/Dockerfile
           push: true
-          tags: 
+          tags: |
             ghcr.io/partner-chains/smart-contracts-tests-cardano-node-ogmios:${{ inputs.tag }}
             ghcr.io/partner-chains/smart-contracts-tests-cardano-node-ogmios:latest
