--- a/.github/workflows/smart-contracts-integrations-tests-ghcr.yml
+++ b/.github/workflows/smart-contracts-integrations-tests-ghcr.yml
@@ -32,6 +32,7 @@ jobs:
           context: toolkit/offchain/tests/docker/
           file: toolkit/offchain/tests/docker/Dockerfile
           push: true
-          tags: 
-            ghcr.io/partner-chains/smart-contracts-tests-cardano-node-ogmios:${{ inputs.tag }}
-            ghcr.io/partner-chains/smart-contracts-tests-cardano-node-ogmios:latest
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/smart-contracts-tests-cardano-node-ogmios:${{ inputs.tag }}
+            ghcr.io/${{ github.repository_owner }}/smart-contracts-tests-cardano-node-ogmios:latest
+
