--- a/toolkit/offchain/Cargo.toml
+++ b/toolkit/offchain/Cargo.toml
@@ -40,3 +40,4 @@ fraction = { workspace = true, features = ["with-decimal", "with-serde-support"]
 proptest = { workspace = true }
 time = { workspace = true, features = ["std", "serde", "parsing"] }
 pretty_assertions = { workspace = true }
+testcontainers = { workspace = true }
