--- a/toolkit/cli/smart-contracts-commands/Cargo.toml
+++ b/toolkit/cli/smart-contracts-commands/Cargo.toml
@@ -15,3 +15,6 @@ tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 cardano-serialization-lib = { workspace = true }
+
+[dev-dependencies]
+hex-literal = { workspace = true }
