--- a/.github/actions/deploy/argocd/deploy-argocd/action.yml
+++ b/.github/actions/deploy/argocd/deploy-argocd/action.yml
@@ -19,11 +19,11 @@ runs:
         curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
         chmod +x ./kubectl
         sudo mv ./kubectl /usr/local/bin/kubectl
-    
-        # Install AWS CLI v2
+  
+        # Install or update AWS CLI v2
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install
+        unzip -o awscliv2.zip
+        sudo ./aws/install --update
       shell: bash
 
     - name: Configure kubectl
