--- a/toolkit/utils/ogmios-client/Cargo.toml
+++ b/toolkit/utils/ogmios-client/Cargo.toml
@@ -10,7 +10,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 fraction = { workspace = true, features = ["with-decimal", "with-serde-support"] }
 hex = { workspace = true }
-jsonrpsee = { workspace = true, optional = true, features = ["client-core", "http-client", "macros"] }
+jsonrpsee = { workspace = true, optional = true, features = ["client-core", "http-client", "macros", "ws-client"] }
 serde = { workspace = true }
 serde_json = { workspace = true, features = ["raw_value", "arbitrary_precision"] }
 thiserror = { workspace = true }
