fix: devshell tests not a pre-merge check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -233,7 +233,7 @@ jobs:
         run: |
           if [[ "${{ needs.build.result }}" != "success" ||
                 "${{ needs.local-environment-tests.result }}" != "success" ||
-                "${{ needs.devshell-tests.result }}" != "success" ]]; then
+#                "${{ needs.devshell-tests.result }}" != "success" ]]; then
             echo "One or more needed jobs failed."
             exit 1
           else
