--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,73 +125,72 @@ jobs:
           ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
         shell: bash
 
+  #deploy-argocd:
+  #  if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
+  #  needs: build
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - name: Checkout
+  #      uses: actions/checkout@v4
+  #      with:
+  #        fetch-depth: 0
+  #        ref: ${{ github.event.pull_request.head.sha || github.sha }}
+  #    - name: Deploy ArgoCD Node
+  #      uses: ./.github/actions/deploy/argocd/deploy-argocd
+  #      with:
+  #        sha: ${{ needs.build.outputs.sha }}
+  #      env:
+  #        ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+  #        kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+  #        K8S_SERVER: ${{ secrets.K8S_SERVER }}
+  #        K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
 
-  deploy-argocd:
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-      - name: Deploy ArgoCD Node
-        uses: ./.github/actions/deploy/argocd/deploy-argocd
-        with:
-          sha: ${{ needs.build.outputs.sha }}
-        env:
-          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+  #argocd-tests:
+  #  continue-on-error: true
+  #  if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
+  #  needs: [build, deploy-argocd]
+  #  runs-on: eks
+  #  steps:
+  #    - name: Checkout
+  #      uses: actions/checkout@v4
+  #      with:
+  #        fetch-depth: 0
+  #        ref: ${{ github.event.pull_request.head.sha || github.sha }}
+  #    - name: Run Tests
+  #      uses: ./.github/actions/tests/argocd-tests
+  #      with:
+  #        sha: ${{ needs.build.outputs.sha }}
+  #        node-host: sha-${{ needs.build.outputs.sha }}-service.integration-testing.svc.cluster.local
+  #        node-port: 9933
+  #        ssh_key_binary_host: ${{ secrets.SSH_KEY_BINARY_HOST }}
+  #      env:
+  #        AWS_ROLE_ARN_: ${{ secrets.AWS_ROLE_ARN_ }}
+  #        SSH_KEY_BINARY_HOST: ${{ secrets.SSH_KEY_BINARY_HOST }}
+  #        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+  #        JIRA_URL: ${{ secrets.JIRA_URL }}
+  #        ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+  #        kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+  #        K8S_SERVER: ${{ secrets.K8S_SERVER }}
+  #        K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
 
-  argocd-tests:
-    continue-on-error: true
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
-    needs: [build, deploy-argocd]
-    runs-on: eks
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-      - name: Run Tests
-        uses: ./.github/actions/tests/argocd-tests
-        with:
-          sha: ${{ needs.build.outputs.sha }}
-          node-host: sha-${{ needs.build.outputs.sha }}-service.integration-testing.svc.cluster.local
-          node-port: 9933
-          ssh_key_binary_host: ${{ secrets.SSH_KEY_BINARY_HOST }}
-        env:
-          AWS_ROLE_ARN_: ${{ secrets.AWS_ROLE_ARN_ }}
-          SSH_KEY_BINARY_HOST: ${{ secrets.SSH_KEY_BINARY_HOST }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          JIRA_URL: ${{ secrets.JIRA_URL }}
-          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-
-  teardown-argocd:
-    needs: [build, argocd-tests]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-      - name: Teardown ArgoCD Environment
-        uses: ./.github/actions/deploy/argocd/teardown-argocd
-        with:
-          sha: ${{ needs.build.outputs.sha }}
-        env:
-          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+  #teardown-argocd:
+  #  needs: [build, argocd-tests]
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - name: Checkout
+  #      uses: actions/checkout@v4
+  #      with:
+  #        fetch-depth: 0
+  #        ref: ${{ github.event.pull_request.head.sha || github.sha }}
+  #    - name: Teardown ArgoCD Environment
+  #      uses: ./.github/actions/deploy/argocd/teardown-argocd
+  #      with:
+  #        sha: ${{ needs.build.outputs.sha }}
+  #      env:
+  #        ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+  #        kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+  #        K8S_SERVER: ${{ secrets.K8S_SERVER }}
+  #        K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
 
   devshell-tests:
     needs: build
