--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -103,6 +103,26 @@ jobs:
           tag: ${{ inputs.tag }}
           os: macos-arm64
 
+  upload-to-s3:
+    needs:
+      - build-linux
+      - build-macos-x86_64
+      - build-macos-arm64
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.sha }}
+      - name: Upload Artifacts to S3
+        uses: ./.github/actions/artifacts/upload-to-s3
+        with:
+          sha: ${{ inputs.sha }}
+          bucket-name: "TODO"
+
   build-and-publish-ecr:
     permissions:
       id-token: write
